EA-2574: Improve entity update scheduling  (#106)
- return disabled entities as "skipped" instead of "failures"
- set required response headers